@@ -1,5 +1,10 @@
 2006-05-23  Jie Zhang  <jie.zhang@analog.com>
 
+	* elf32-bfin.c (bfinfdpic_relocate_section): Clear reloc for
+	deteted entries in .eh_frame section.
+
+2006-05-23  Jie Zhang  <jie.zhang@analog.com>
+
 	* elf32-bfin.c (bfin_check_relocs): Use __GLOBAL_OFFSET_TABLE_
 	instead of _GLOBAL_OFFSET_TABLE_.
 	(bfin_relocate_section): Ditto.
